Group task sprint 13 Updated with recommendations