@@ -4,6 +4,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dal.event.EventRepository;
 import ru.yandex.practicum.filmorate.dto.film.FilmDto;
 import ru.yandex.practicum.filmorate.dto.film.NewFilmRequest;
 import ru.yandex.practicum.filmorate.dto.film.UpdateFilmRequest;
@@ -16,7 +17,6 @@ import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.interfaces.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.interfaces.UserStorage;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
@@ -28,12 +28,14 @@ public class FilmService {
 
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+    private final EventRepository eventRepository;
 
     @Autowired
     public FilmService(@Qualifier("filmDbStorage") FilmStorage filmStorage,
-                       @Qualifier("userDbStorage") UserStorage userStorage) {
+                       @Qualifier("userDbStorage") UserStorage userStorage, EventRepository eventRepository) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
+        this.eventRepository = eventRepository;
     }
 
     public Collection<FilmDto> getAllFilms() {
@@ -67,7 +69,7 @@ public class FilmService {
             throw new NotFoundException("Фильм с таким id не найден");
         }
 
-        updFilm = FilmMapper.updateFilmFields(updFilm, request);
+        FilmMapper.updateFilmFields(updFilm, request);
 
         if (request.getGenres() == null || request.getGenres().isEmpty()) {
             updFilm.setGenres(new HashSet<>());
@@ -89,9 +91,11 @@ public class FilmService {
     public void setLike(long userId, long filmId) {
         log.debug("Пользователь (userID: {}) ставит лайк фильму (filmID: {})", userId, filmId);
 
-        if (filmStorage.isThisPairExist(userId, filmId)){
+        if (filmStorage.isThisPairExist(userId, filmId)) {
             log.debug("Пользователь (userID: {}) уже поставил лайк фильму (filmID: {})", userId, filmId);
-            }
+            eventRepository.addLikeEvent(userId, filmId);
+            return;
+        }
 
         boolean success = filmStorage.addLike(userId, filmId);
 
@@ -157,16 +161,17 @@ public class FilmService {
         } else if (by.isEmpty()) {
             throw new UnclassifiedException("Не переданы параметры для поиска");
         } else {
-            switch (by.get(0)) {
-                case "title":
+            return switch (by.getFirst()) {
+                case "title" -> {
                     log.debug("Получение списка фильмов по названию");
-                    return filmStorage.searchFilmsByTitle(query);
-                case "director":
+                    yield filmStorage.searchFilmsByTitle(query);
+                }
+                case "director" -> {
                     log.debug("Получение списка фильмов по режиссеру");
-                    return filmStorage.searchFilmsByDirector(query);
-                default:
-                    throw new UnclassifiedException("Поиск по этому параметру не реализован");
-            }
+                    yield filmStorage.searchFilmsByDirector(query);
+                }
+                default -> throw new UnclassifiedException("Поиск по этому параметру не реализован");
+            };
         }
     }
 
